fix(photo): nav controls misalignment

--- a/css/photo.css
+++ b/css/photo.css
@@ -32,7 +32,7 @@ Image popup
   position: absolute;
   top:1rem;
   left:50%;
-  transform: translate(50%, -50%);
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: space-between;
   gap:1rem;
